Chonker/Tests/Error/redefine.chonk
var number a = 2;
var number a = 3;